[package]
name = "oss-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace"] }
wickdb = { git = "https://github.com/Fullstop000/wickdb", branch = "master" }
dotenv = "0.15.0"
flexi_logger = "0.17"
log = "0.4.14"
