[package]
name = "oss-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace"] }
wickdb = { git = "https://github.com/Fullstop000/wickdb", branch = "master" }
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = {version = "1.0"}
flexi_logger = "0.17"
log = "0.4.14"
bytes = "1.1.0"
bson = "2.3.0"
md5 = "0.7.0"
